[project]
name = "toy-text-rl"
version = "0.1.0"
description = "basic RL algorithms for Gymnasium Toy Text environments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "" }
]
dependencies = [
    "gymnasium[toy-text]>=1.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "pillow",
    "tqdm>=4.66.0",
    "ipykernel>=6.29.0",
]

[dependency-groups]
dev = [
    "black>=24.1.0",
]